[Bug] Code cleanup